# linkedin_gmail_jobs_hub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_daily_sync.py
app/: main.py
app/api/: deps.py  router.py  routes_ignored.py  routes_jobs.py  routes_stats.py  routes_sync.py
app/core/: config.py  logging.py  security.py
app/domain/: enums.py  models.py  schemas.py
app/infra/: gmail_client.py
app/persistence/: db.py
app/persistence/repositories/: jobs.py  parse_failures.py  processed_gmail_messages.py  sync_run_events.py  sync_runs.py  unknown_email_templates.py
app/services/: dedup_service.py  error_service.py  job_csv_export_service.py  normalize_service.py  parse_service.py  retry_service.py  sync_service.py
app/tests/: test_api.py  test_dedup.py  test_gmail_client.py  test_gmail_queries.py  test_normalize.py  test_parser.py  test_sync_run_repo.py  test_sync_service.py
app/tests/fixtures/: linkedin_application_confirmation.eml  linkedin_email_redirect_sample.html  linkedin_email_sample.html  linkedin_multi_jobs.eml  linkedin_saved_jobs_reminder.eml
scripts/: bootstrap_gmail_token.py  run_daily_sync.bat  seed_demo_data.py  start_api.bat
scripts/powershell/: config.ps1  export_jobs_to_excel.ps1  how_exec.txt  show_db_tables.ps1
